buildpacks/nodejs-yarn/src/snapshots/errors___yarn_build_script_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - Command failed `yarn run build`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to execute build script
!
! The Heroku Node.js Yarn buildpack allows customization of the build process by executing the following scripts if they are defined in `package.json`:
! - `heroku-prebuild` 
! - `heroku-build` or `build` 
! - `heroku-postbuild`
!
! An unexpected error occurred while executing `yarn run build`. See the log output above for more information.
!
! Suggestions:
! - Ensure that this command runs locally without error.
!
! Use the debug information above to troubleshoot and retry your build.
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
