buildpacks/nodejs-yarn/src/snapshots/errors___yarn_cli_layer_download_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - Request to `https://test/error` failed
    Error: error sending request

! Failed to download Yarn
!
! An unexpected error occurred while downloading the Yarn package manager. This error can occur due to an unstable network connection or an issue with the upstream repository.
!
! Suggestions:
! - Check the npm status page for any ongoing incidents (https://status.npmjs.org/)
!
! Use the debug information above to troubleshoot and retry your build.
