buildpacks/nodejs-yarn/src/snapshots/errors___yarn_get_node_linker_command_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - Command failed `yarn config get nodeLinker`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to read Yarn's nodeLinker configuration
!
! An unexpected value was encountered when trying to read Yarn's nodeLinker configuration. This configuration is read using the command `yarn config get nodeLinker`.
!
! Suggestions:
! - Ensure the above command runs locally.
