buildpacks/nodejs-yarn/src/snapshots/errors___yarn_inventory_parse_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - TOML parse error at line 1, column 12
      |
    1 | [[artifacts
      |            ^
    invalid table header
    expected `.`, `]]`

! Failed to parse Yarn inventory
!
! The Heroku Node.js Yarn buildpack was unable to parse the Yarn inventory file.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
