buildpacks/nodejs-yarn/src/snapshots/errors___yarn_package_json_access_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - test I/O error blah

! Error reading `./package.json`
!
! The Heroku Node.js Yarn reads from `./package.json` to complete the build but the file can't be read.
!
! Suggestions:
! - Ensure the file has read permissions.
!
! Use the debug information above to troubleshoot and retry your build.
